--- a/static websites/popular books/index.html
+++ b/static websites/popular books/index.html
@@ -13,10 +13,28 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="popularbooks.css" />
 </head>
 
 <body>
-    Your code goes here
+    <div style="padding-right: 46px;"><span class="">Basically</span><span
+            class="landing-page-changedText-0-2-21">,</span><span class=""> I</span><span class=""> </span><span
+            class="landing-page-changedText-0-2-21">am </span><span class="">a Mechanical Engineer and I have been
+        </span><span class="">in </span><span class="landing-page-changedText-0-2-21">the</span><span class="">
+        </span><span class="">manufacturing field </span><span class="landing-page-changedText-0-2-21">for</span><span
+            class="">
+        </span><span class="landing-page-changedText-0-2-21">one year with </span><span class="">Delphi-TVS as
+        </span><span class="">Quality Inspector </span><span class="landing-page-changedText-0-2-21">from</span><span
+            class="">
+        </span><span class="landing-page-changedText-0-2-21">2020</span><span class=""> </span><span
+            class="landing-page-changedText-0-2-21">to</span><span class=""> </span><span
+            class="landing-page-changedText-0-2-21">2021.</span><span class=""> </span><span
+            class="landing-page-changedText-0-2-21">I</span><span class=""> </span><span
+            class="landing-page-changedText-0-2-21">am</span><span class=""> </span><span class="">also </span><span
+            class="landing-page-changedText-0-2-21">looking</span><span class=""> </span><span
+            class="landing-page-changedText-0-2-21">to</span><span class=""> </span><span class="">change </span><span
+            class="landing-page-changedText-0-2-21">careers</span><span class=""> </span><span class="">into
+            IT</span><span class="">.</span></div>
     <script type="text/javascript"
         src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/js/ccbp-ui-kit.js"></script>
 </body>
